# DevOps_with_Kubernetes

./: GitHub_action.yaml  README.md  delete.yaml  deployment.yaml  service.yaml
Part1/Exercise_1.01/: README.md
Part1/Exercise_1.03/: deployment.yaml
Part1/Exercise_1.04/: README.md
Part1/Exercise_1.05/: README.md
Part1/Exercise_1.06/: README.md
Part1/Exercise_1.07/: README.md
Part1/Exercise_1.09/: README.md
Part1/Exercise_1.12/: README.md
Part2/Exercise_2.02/: README.md
Part2/Exercise_2.02/app/todo_app/: Cargo.toml  Dockerfile  Trunk.toml
Part2/Exercise_2.02/app/todo_app/src/: main.rs
Part2/Exercise_2.03/: README.md  pinglog_namespace.yaml
Part2/Exercise_2.04/: README.md
Part2/Exercise_2.05/: README.md
Part2/Exercise_2.07/: README.md
Part2/Exercise_2.08/: README.md
Part2/Exercise_2.10/: README.md
Part3/Exercise_3.08/: README.md
Part3/Exercise_3.09/: README.md
Part4/Exercise_4.02/app/todo_backend/: Cargo.toml
Part5/Exercise_5.01/: README.md
Part5/Exercise_5.03/: script_output.txt
Part5/Exercise_5.06/: README.md
Part5/Exercise_5.07/: README.md
Part5/Exercise_5.08/: README.md
app/controller/: deployment.mustache  ingress.mustache  package-lock.json  service.mustache
app/dummysite/: Dockerfile
app/log_output/: Cargo.toml
app/log_output_reader/: Cargo.toml  Dockerfile
app/log_output_writer/: Cargo.toml
app/log_reader/: Dockerfile
app/pingpong/: Cargo.toml  Dockerfile
app/pingpong/migrations/: 0001_pings_table.sql
app/pingpong/src/: main.rs
app/todo_app/: Cargo.toml  Dockerfile  Trunk.toml  index.html
app/todo_app/src/: main.rs
app/todo_backend/: Cargo.toml  Dockerfile
app/todo_backend/migrations/: 0002_image_table.sql
app/todo_backend/src/: main.rs
manifests/: analysistemplate.yaml  clusterrole.yaml  configmap.yaml  cronjob.yaml  customresource.yaml  deployment.yaml  dummysite-kubernetes-wiki.yaml  ingress.yaml  log_reader_deployment.yaml  pinglog_namespace.yaml  postgres.yaml  prometheus-values.yaml  service.yaml  todo-app-depl.yaml  todo-backend-depl.yaml  todo_app_rollout.yaml  todo_backend_rollout.yaml
volumes/: peristentvolumeclaim.yaml
(+92 files in other folders)
