[package]
name = "todo_app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["headers", "http1", "tokio"] }
reqwest = {version = "0.12.9", features = ["json"]}
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["fs"] }
