[package]
name = "todo_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["tokio", "http1", "macros"] }
http = "1.2.0"
reqwest = "0.12.9"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.5", features = ["fs", "cors"] }
