[package]
name = "todo_app"
version = "0.1.0"
edition = "2021"


[dependencies]
http = "1.2.0"
reqwasm = "0.5.0"
serde = {version="1.0.216", features=["derive"]}
serde_json = "1.0.133"
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"
web-sys = "0.3.76"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
